// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeTabBarItem renders TradeTabBarItem with icon and label 1`] = `
<View
  accessibilityLabel="Trade"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "justifyContent": "center",
      "paddingBottom": 4,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  testID="trade-tab-item"
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 28,
          "height": 56,
          "justifyContent": "center",
          "marginTop": -28,
          "width": 56,
        },
        {
          "backgroundColor": "#4459ff",
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        },
      ]
    }
    testID="trade-tab-bar-item-icon-container"
  >
    <SvgMock
      color="#ffffff"
      fill="currentColor"
      height={32}
      name="Add"
      style={
        {
          "height": 32,
          "width": 32,
        }
      }
      width={32}
    />
  </View>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#686e7d",
        "flexShrink": 0,
        "fontFamily": "Geist Medium",
        "fontSize": 12,
        "letterSpacing": 0.25,
        "lineHeight": 20,
        "marginTop": 4,
        "minWidth": 0,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    Trade
  </Text>
</View>
`;

exports[`TradeTabBarItem renders TradeTabBarItem with icon only 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "justifyContent": "center",
      "paddingBottom": 4,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  testID="trade-tab-item"
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 28,
          "height": 56,
          "justifyContent": "center",
          "marginTop": -28,
          "width": 56,
        },
        {
          "backgroundColor": "#4459ff",
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        },
      ]
    }
    testID="trade-tab-bar-item-icon-container"
  >
    <SvgMock
      color="#ffffff"
      fill="currentColor"
      height={32}
      name="Add"
      style={
        {
          "height": 32,
          "width": 32,
        }
      }
      width={32}
    />
  </View>
</View>
`;
